Fix bug of animated table col/section/row background

Was to create a patch to move the background changed flag into
LayoutObject as preparation for cleanup/optimization of paint
invalidation of local attachment backgrounds, but found the bug which
needs the background flag to fix.

Besides the background changed flag change, also move handling of
mayNeedPaintInvalidationAnimatedBackground and delayed invalidation
into LayoutBox::ensureIsReadyForPaintInvalidation(), and
TablePaintInvalidator call ensureIsReadyForPaintInvalidation() for
col/section/row before checking their background changed flags.

BUG=665238
TEST=paint/invalidation/table/animated-row-background.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2501833002
Cr-Commit-Position: refs/heads/master@{#432380}

Former-commit-id: ffeecd35f06da8881d403717e84e561b74acd87b